[package]
name = "helyi-torpe"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.28"
bwrap = {version="1.3.0", features = ["use_std"]}
dotenv = "0.15.0"
imageproc = "0.25.0"
poise = "0.6.1"
rand = {version = "0.8.5", features = ["small_rng"]}
reqwest = "0.12.5"
#serenity = "0.12.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
serenity = { git="https://github.com/serenity-rs/serenity.git", rev="e34f4491ee3a0b20ea8dc30cbc77b257f402f692" }
